--- a/style.css
+++ b/style.css
@@ -16,3 +16,10 @@ html,body{
     height: 100px;
     margin: 50%;
 }
+#h1{
+    margin-top: 5vh;
+    color: orangered;
+}
+#searchbox{
+    position: absolute;
+}
